# sniffio

./: .appveyor.yml  .coveragerc  .gitignore  .mypy.ini  .readthedocs.yml  .travis.yml  CHEATSHEET.rst  MANIFEST.in  README.rst  ci.sh  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: ci.yml
ci/: travis.sh
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst
newsfragments/: 10.feature.rst  39.feature.rst  44.bugfix.rst  5.feature.rst
sniffio/: __init__.py  _impl.py  _version.py
sniffio/_tests/: conftest.py  test_example.py  test_sniffio.py
