[build-system]
requires = ["setuptools>=42.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sniffio/_version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.towncrier]
package = "sniffio"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/python-trio/sniffio/issues/{issue}>`__"
