[metadata]
name = sniffio
author = Nathaniel J. Smith
author_email = njs@pobox.com
license = MIT OR Apache-2.0
description = Sniff out which async library your code is running under
long_description = file: README.rst
keywords = async, trio, asyncio
url = https://github.com/python-trio/sniffio
classifiers =
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Framework :: Trio
    Framework :: AsyncIO
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.7
tests_require = curio

[options.package_data]
sniffio = py.typed
